[tool.poetry]
name = "evilcorp"
version = "0.1.0"
description = ""
authors = ["Ilay Gilman <ilaygilman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^1.1.0"
scapy = "^2.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
